--- a/index.html
+++ b/index.html
@@ -78,11 +78,12 @@
     <!-- Hero section start -->
 
 <section class="hero" id="home">
-    <main class="content">
-        <h1>Mari <span>belanja</span> apapun yang anda butuhkan</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsum!</p>
-        <a href="" class="cta">Beli sekarang</a>
-    </main>
+    <div class="mask-container">
+        <main class="content">
+            <h1>Mari <span>belanja</span> apapun yang anda butuhkan</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis, ipsum!</p>
+        </main>
+    </div>
 </section>
 
     <!-- Hero section end -->
